# libgpu

./: CMakeLists.txt  gpu.c  main.c  matrix.h  shapes.h
src/: CMakeLists.txt
src/example/: main.c
src/gpu/: cmd.c  cmd.h  enum.h  frame.c  frame.h  gpu.c  gpu.h  matrix.h  mm.c  mm.h  raster.c  raster.h  types.h  vertex.c  vertex.h  verts.c  verts.h
src/util/: matrix.c  matrix.h  pixel.c  pixel.h
